Fix broken learning object loading animation safari. Remove Learning Objects titlte on profile when user has no objects. Force globals.scss to rebuild

--- a/src/app/shared/learning-object/learning-object.component.scss
+++ b/src/app/shared/learning-object/learning-object.component.scss
@@ -95,10 +95,11 @@
     }  
 
     .learning-object {
+        overflow: hidden;
 
         &:after {
             content: '';
-            background: linear-gradient(90deg, transparent, white, transparent);
+            background: linear-gradient(90deg, rgba(255, 255, 255, 0), white, rgba(255, 255, 255, 0));
             position: absolute;
             top: 0;
             bottom: 0;
